--- a/app/views/computers/available.html.erb
+++ b/app/views/computers/available.html.erb
@@ -1,13 +1,16 @@
-<div id='subtitles' >
+<%= render :partial => 'search' %>
+
+<% content_tag :div, :id => 'subtitles' do %>
   <%= t('phrases.list_of') + ' ' + t('places.computer') + ' ' + t('computers.available') %>
-</div>
-<div id='left-content' >
+<% end %>
+
+<% content_tag :div, :id => 'left-content' do %>
   <%= render :partial => 'list' %>
-</div>
+<% end %>
 
 
 <%= will_paginate @computers %>
 
-<br />
+<%= content_tag('br') %>
 
 <%= link_to t('computers.new'), new_computer_path %>
