--- a/app/views/computers/show.html.erb
+++ b/app/views/computers/show.html.erb
@@ -1,3 +1,6 @@
+<%= link_to  t('common-actions.download-pdf'), :controller => 'computers',
+:action => 'pdf', :id => params[:id] %>
+
 <%= render :partial => 'computer_info' %>
 
 
