- Controllers   * little changes
- View and partial
  * little changes

- Library
  * changes in single report

--- a/app/views/computers/show.html.erb
+++ b/app/views/computers/show.html.erb
@@ -1,6 +1,8 @@
-<%= link_to  t('common-actions.download-pdf'), :controller => 'computers',
-:action => 'pdf', :id => params[:id] %>
-
+<% content_tag :div, :id => 'right-content' do %>
+  <%= link_to  t('common-actions.download-pdf'),
+      :controller => 'computers',
+  :action => 'pdf', :id => params[:id] %>
+<% end %>
 <%= render :partial => 'computer_info' %>
 
 
