--- a/app/views/computers/_computer_info.html.erb
+++ b/app/views/computers/_computer_info.html.erb
@@ -1,4 +1,7 @@
 <!-- Computer info -->
+
+<%= content_tag('div', t('computers.place')) %>
+<%= content_tag('div', link_to(@computer.place.title, '/places/' + @computer.place.id.to_s) ) rescue nil%>
 <%= show_info(t('computers.name'), 'principal-device', 'Computer', @computer.id, 'name') %>
 <%= show_info('Ip', 'data-principal-device', 'Computer', @computer.id, 'ip') %>
 <%= show_info('Mac', 'data-principal-device', 'Computer', @computer.id, 'mac') %>
