- Partials   * fixed bug
- Library
  * changed something in pdf report for places

--- a/app/views/computers/_list.html.erb
+++ b/app/views/computers/_list.html.erb
@@ -23,7 +23,7 @@
       <%= content_tag('td', computer.harddisk.collect {|x| x.size.to_s + ' ' + x.unit.upcase + '<br>' } ) rescue nil %>
       <%= content_tag('td', computer.cd.collect {|x| x.model + '<br>' } ) rescue nil%>
       <%= content_tag('td', computer.dvd.collect {|x| x.model + '<br>' } ) rescue nil %>
-      <%= content_tag('td', link_to(computer.place.title, 'places/' + computer.place.id.to_s) ) rescue nil%>
+      <%= content_tag('td', link_to(computer.place.title, '/places/' + computer.place.id.to_s) ) rescue nil%>
       <%= content_tag('td', check(computer.available)) %>
       <%= content_tag('td', in_workstation?(computer )) %>
       <%= content_tag('td', computer.inventory_register) %>
