--- a/app/views/computers/_list.html.erb
+++ b/app/views/computers/_list.html.erb
@@ -25,7 +25,7 @@
       <%= content_tag('td', computer.dvd.collect {|x| x.model + '<br>' } ) rescue nil %>
       <%= content_tag('td', link_to(computer.place.title, '/places/' + computer.place.id.to_s) ) rescue nil%>
       <%= content_tag('td', check(computer.available)) %>
-      <%= content_tag('td', in_workstation?(computer )) %>
+      <%= content_tag('td', in_workstation?(computer, 'computer_id' )) %>
       <%= content_tag('td', computer.inventory_register) %>
       <%= content_tag('td', link_to(t('computers.bill'), 'bills/'+ computer.bill_id.to_s)) %>
       <%= content_tag('td', link_to(t('common-actions.show') , computer)) %>
