--- a/app/views/screens/_list.html.erb
+++ b/app/views/screens/_list.html.erb
@@ -15,7 +15,7 @@
     <%= content_tag('td', screen.serialnumber) %>
     <%= content_tag('td', screen.mark.name) rescue nil  %>
     <%= content_tag('td', link_to(screen.place.title, '/places/' + screen.place.id.to_s) ) rescue nil %>
-    <%= content_tag('td', in_workstation?(screen)) rescue nil %>
+    <%= content_tag('td', in_workstation?(screen, 'screen_id')) rescue nil%>
     <%= content_tag('td', screen.inventory_register) %>
     <%= content_tag('td', link_to(t('screens.bill'), 'bills/'+ screen.bill_id.to_s)) %>
     <%= content_tag('td', link_to(t('common-actions.show'), screen)) %>
