- Views   * added french option in user views

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -14,7 +14,7 @@
     <%= f.password_field :password_confirmation %></p>
     <div id='quarter'>
       <%= label_tag 'language', t('user.language') %><br/>
-      <%= f.select :language, [['English','en'], ['Spanish','es']] %>
+      <%= f.select :language, [['English','en'], ['Spanish','es'], ['French','fr']] %>
     </div>
    <% end %>
 
