- Helpers   * added new method to use an specific kind of character     for some languages in application helper   * added flag of french language
- Partial
  * refactorin of head partial

- Images
  * added flag of french language

-Locales
  * change legend in title translation of page

--- a/app/views/shared/_head.html.erb
+++ b/app/views/shared/_head.html.erb
@@ -1,7 +1,7 @@
 <% cache(:fragment => "shared/_head") do %>
 <head>
-  <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-  <title>Inventory</title>
+  <%= set_charset %>
+  <title><%= t('inventory.title') %></title>
   <meta name="keywords" content="" />
   <meta name="description" content="" />
   <link href="default.css" rel="stylesheet" type="text/css" />
