- Partial   * translated pages menu options
- Locales
  * added new translations for pages

--- a/app/views/shared/_menu.html.erb
+++ b/app/views/shared/_menu.html.erb
@@ -147,12 +147,12 @@
 
       <li class="top">
         <a href="#" id="telmex" class="top_link">
-          <span class="down">Pages</span>
+          <span class="down"><%= t 'menu.pages' %></span>
           <!--[if gte IE 7]><!--></a><!--<![endif]-->
         <!--[if lte IE 6]><table><tr><td><![endif]-->
         <ul class="sub">
-          <li><a href="/pages/">List Pages</a></li>
-          <li><a href="/pages/new">New Page</a></li>
+          <li><a href="/pages/"><%= t 'menu.list-pages' %></a></li>
+          <li><a href="/pages/new"><%= t 'menu.new-page' %></a></li>
         </ul>
         <!--[if lte IE 6]></td></tr></table></a><![endif]-->
       </li>
