- Locales   * added translation for spanish argentina   * changes in all translations
- Partials
  * adapted to new translations

- Views
  * added new options for translate in spanish argentina

- Helpers
  * added option to show flag of argentina

--- a/app/views/bills/_selector_companies.html.erb
+++ b/app/views/bills/_selector_companies.html.erb
@@ -1,5 +1,5 @@
 <% cache(:fragment => "bills/_selector_companies") do %>
-<label><%= t('bill.select-by-company') %></label>
+<label><%= t('bill.select_by_company') %></label>
 <% @options = []
    @options << [t('places.select_one'),'select one']
    Company.find(:all).collect {|x| @options << [x.name, x.id] }
