--- a/app/views/shared/_menu.html.erb
+++ b/app/views/shared/_menu.html.erb
@@ -13,9 +13,9 @@
           <!--[if gte IE 7]><!--></a><!--<![endif]-->
         <!--[if lte IE 6]><table><tr><td><![endif]-->
         <ul class="sub">
-          <li><a href="/workstations"><%= t 'menu.list-workstations' %></a></li>
+          <li><a href="/workstations"><%= t 'menu.list_workstations' %></a></li>
           <li><a href="/workstations/new"><%= t 'menu.new' %></a></li>
-          <li><a href="/workstations/stats"><%= t 'menu.stats-workstations' %></a></li>
+          <li><a href="/workstations/stats"><%= t 'menu.stats_workstations' %></a></li>
         </ul>
         <!--[if lte IE 6]></td></tr></table></a><![endif]-->
       </li>
@@ -27,9 +27,9 @@
           <!--[if gte IE 7]><!--></a><!--<![endif]-->
         <!--[if lte IE 6]><table><tr><td><![endif]-->
         <ul class="sub">
-          <li><a href="/places"><%= t 'menu.list-places' %></a></li>
-          <li><a href="/places/new"><%= t 'menu.new-place' %></a></li>
-          <li><a href="/places/stats"><%= t 'menu.stats-places' %></a></li>
+          <li><a href="/places"><%= t 'menu.list_places' %></a></li>
+          <li><a href="/places/new"><%= t 'menu.new_place' %></a></li>
+          <li><a href="/places/stats"><%= t 'menu.stats_places' %></a></li>
         </ul>
         <!--[if lte IE 6]></td></tr></table></a><![endif]-->
       </li>
@@ -41,53 +41,53 @@
         <ul class="sub">
           <li><a href="/computers"  class="fly"><%= t 'menu.computers' %></a>
             <ul>
-              <li><a href="/computers"  class="fly"><%= t 'menu.list-computers' %></a>
-              <li><a href="/computers/available"><%= t 'menu.availables-computers' %></a></li>
-              <li><a href="/computers/unavailable"><%= t 'menu.unavailables-computers' %></a></li>
-              <li><a href="/computers/stats"><%= t 'menu.stats-computers' %></a></li>
-              <li><a href="/computers/new"><%= t 'menu.new-computer' %></a></li>
+              <li><a href="/computers"  class="fly"><%= t 'menu.list_computers' %></a>
+              <li><a href="/computers/available"><%= t 'menu.availables_computers' %></a></li>
+              <li><a href="/computers/unavailable"><%= t 'menu.unavailables_computers' %></a></li>
+              <li><a href="/computers/stats"><%= t 'menu.stats_computers' %></a></li>
+              <li><a href="/computers/new"><%= t 'menu.new_computer' %></a></li>
             </ul>
           </li>
           <li><a href="/mother_boards" class="fly"><%= t 'menu.motherboards' %></a>
             <ul>
-              <li><a href="/mother_boards"><%= t 'menu.list-motherboards' %></a></li>
-              <li><a href="/mother_boards/new"><%= t 'menu.new-motherboard' %></a></li>
+              <li><a href="/mother_boards"><%= t 'menu.list_motherboards' %></a></li>
+              <li><a href="/mother_boards/new"><%= t 'menu.new_motherboard' %></a></li>
             </ul>
           </li>
           <li><a href="/harddisks" class="fly"><%= t 'menu.harddisks' %></a>
             <ul>
-              <li><a href="/harddisks"><%= t 'menu.list-harddisks' %></a></li>
-              <li><a href="/harddisks/new"><%= t 'menu.new-harddisk' %></a></li>
+              <li><a href="/harddisks"><%= t 'menu.list_harddisks' %></a></li>
+              <li><a href="/harddisks/new"><%= t 'menu.new_harddisk' %></a></li>
             </ul>
           </li>
           <li><a href="/memories" class="fly"><%= t 'menu.memories' %></a>
             <ul>
-              <li><a href="/memories"><%= t 'menu.list-memories' %></a></li>
-              <li><a href="/memories/new"><%= t 'menu.new-memorie' %></a></li>
+              <li><a href="/memories"><%= t 'menu.list_memories' %></a></li>
+              <li><a href="/memories/new"><%= t 'menu.new_memorie' %></a></li>
             </ul>
           </li>
           <li><a href="/cds" class="fly"><%= t 'menu.cds' %></a>
             <ul>
-              <li><a href="/cds"><%= t 'menu.list-cds' %></a></li>
-              <li><a href="/cds/new"><%= t 'menu.new-cd' %></a></li>
+              <li><a href="/cds"><%= t 'menu.list_cds' %></a></li>
+              <li><a href="/cds/new"><%= t 'menu.new_cd' %></a></li>
             </ul>
           </li>
           <li><a href="/dvds" class="fly"><%= t 'menu.dvds' %></a>
             <ul>
-              <li><a href="/dvds"><%= t 'menu.list-dvds' %></a></li>
-              <li><a href="/dvds/new"><%= t 'menu.new-dvd' %></a></li>
+              <li><a href="/dvds"><%= t 'menu.list_dvds' %></a></li>
+              <li><a href="/dvds/new"><%= t 'menu.new_dvd' %></a></li>
             </ul>
           </li>
           <li><a href="/screens" class="fly"><%= t 'menu.screens' %></a>
             <ul>
-              <li><a href="/screens"><%= t 'menu.list-screens' %></a></li>
-              <li><a href="/screens/new"><%= t 'menu.new-screen' %></a></li>
+              <li><a href="/screens"><%= t 'menu.list_screens' %></a></li>
+              <li><a href="/screens/new"><%= t 'menu.new_screen' %></a></li>
             </ul>
           </li>
           <li><a href="/printers" class="fly"><%= t 'menu.printers' %></a>
             <ul>
-              <li><a href="/printers"><%= t 'menu.list-printers' %></a></li>
-              <li><a href="/printers/new"><%= t 'menu.new-printer' %></a></li>
+              <li><a href="/printers"><%= t 'menu.list_printers' %></a></li>
+              <li><a href="/printers/new"><%= t 'menu.new_printer' %></a></li>
             </ul>
           </li>
         </ul>
@@ -100,8 +100,8 @@
           <!--[if gte IE 7]><!--></a><!--<![endif]-->
         <!--[if lte IE 6]><table><tr><td><![endif]-->
         <ul class="sub">
-          <li><a href="/marks"><%= t 'menu.list-marks' %></a></li>
-          <li><a href="/marks/new"><%= t 'menu.new-mark' %></a></li>
+          <li><a href="/marks"><%= t 'menu.list_marks' %></a></li>
+          <li><a href="/marks/new"><%= t 'menu.new_mark' %></a></li>
         </ul>
         <!--[if lte IE 6]></td></tr></table></a><![endif]-->
       </li>
@@ -112,8 +112,8 @@
           <!--[if gte IE 7]><!--></a><!--<![endif]-->
         <!--[if lte IE 6]><table><tr><td><![endif]-->
         <ul class="sub">
-          <li><a href="/companies/"><%= t 'menu.list-companies' %></a></li>
-          <li><a href="/companies/new"><%= t 'menu.company-new' %></a></li>
+          <li><a href="/companies/"><%= t 'menu.list_companies' %></a></li>
+          <li><a href="/companies/new"><%= t 'menu.company_new' %></a></li>
         </ul>
         <!--[if lte IE 6]></td></tr></table></a><![endif]-->
       </li>
@@ -125,7 +125,7 @@
         <!--[if lte IE 6]><table><tr><td><![endif]-->
         <ul class="sub">
           <li><a href="/bills/"><%= t 'menu.bills' %></a></li>
-          <li><a href="/bills/new"><%= t 'menu.bill-new' %></a></li>
+          <li><a href="/bills/new"><%= t 'menu.bill_new' %></a></li>
         </ul>
         <!--[if lte IE 6]></td></tr></table></a><![endif]-->
       </li>
@@ -137,8 +137,8 @@
           <!--[if gte IE 7]><!--></a><!--<![endif]-->
         <!--[if lte IE 6]><table><tr><td><![endif]-->
         <ul class="sub">
-          <li><a href="/users/list"><%= t 'menu.users-list' %></a></li>
-          <li><a href="/signup"><%= t 'menu.new-account' %></a></li>
+          <li><a href="/users/list"><%= t 'menu.users_list' %></a></li>
+          <li><a href="/signup"><%= t 'menu.new_account' %></a></li>
         </ul>
         <!--[if lte IE 6]></td></tr></table></a><![endif]-->
       </li>
@@ -151,8 +151,8 @@
           <!--[if gte IE 7]><!--></a><!--<![endif]-->
         <!--[if lte IE 6]><table><tr><td><![endif]-->
         <ul class="sub">
-          <li><a href="/pages/"><%= t 'menu.list-pages' %></a></li>
-          <li><a href="/pages/new"><%= t 'menu.new-page' %></a></li>
+          <li><a href="/pages/"><%= t 'menu.list_pages' %></a></li>
+          <li><a href="/pages/new"><%= t 'menu.new_page' %></a></li>
         </ul>
         <!--[if lte IE 6]></td></tr></table></a><![endif]-->
       </li>
@@ -164,7 +164,7 @@
           <!--[if gte IE 7]><!--></a><!--<![endif]-->
         <!--[if lte IE 6]><table><tr><td><![endif]-->
         <ul class="sub">
-          <li><a href="/users/<%= current_user.id %>/edit"><%= t 'menu.account-edit' %></a></li>
+          <li><a href="/users/<%= current_user.id %>/edit"><%= t 'menu.account_edit' %></a></li>
         </ul>
         <!--[if lte IE 6]></td></tr></table></a><![endif]-->
       </li>
