--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -20,7 +20,7 @@
 
   <div id='quarter'>
     <%= label_tag 'language', t('user.language') %>
-    <%= f.select :language, [['English','en'], ['Spanish','es'], ['French','fr']] %>
+    <%= f.select :language, [['English','en'], ['Spanish','es'], ['Español Argentina','es-AR'], ['French','fr']] %>
 
     <div class='clear'></div>
 
