--- a/app/views/bills/_list.html.erb
+++ b/app/views/bills/_list.html.erb
@@ -1,6 +1,6 @@
-<%= link_to t('common-actions.download'), :controller => 'bills',
+<%= link_to t('common_actions.download'), :controller => 'bills',
 :action => 'xls' %> |
-<%= link_to  t('common-actions.download-pdf'), :controller => 'bills',
+<%= link_to  t('common_actions.download_pdf'), :controller => 'bills',
 :action => 'pdf' %>
 
 <% content_tag :table do %>
@@ -8,7 +8,7 @@
   <%= content_tag('th', t('bill.company')) %>
   <%= content_tag('th', t('bill.date')) %>
   <%= content_tag('th', t('bill.code')) %>
-  <th colspan='3'><%= t 'common-actions.actions' %></th>
+  <th colspan='3'><%= t 'common_actions.actions' %></th>
   <% end %>
 
   <% for bill in @bills %>
@@ -16,9 +16,9 @@
     <%= content_tag('td', link_to(bill.company.name, '/companies/' + bill.company.id.to_s) ) rescue nil %>
     <%= content_tag('td', bill.date.strftime("%d/%m/%Y")) %>
     <%= content_tag('td', bill.code) %>
-    <%= content_tag('td',link_to(t('common-actions.show'), bill)) %>
-    <%= content_tag('td',link_to(t('common-actions.edit'), edit_bill_path(bill))) %>
-    <%= content_tag('td',link_to(t('common-actions.destroy'), bill, :confirm => 'Are you sure?', :method => :delete)) %>
+    <%= content_tag('td',link_to(t('common_actions.show'), bill)) %>
+    <%= content_tag('td',link_to(t('common_actions.edit'), edit_bill_path(bill))) %>
+    <%= content_tag('td',link_to(t('common_actions.destroy'), bill, :confirm => 'Are you sure?', :method => :delete)) %>
   <% end -%>
 <% end -%>
 <% end -%>
